--- a/overlays/migrate-to-nonroot/grafana/grafana.StatefulSet.yaml
+++ b/overlays/migrate-to-nonroot/grafana/grafana.StatefulSet.yaml
@@ -7,7 +7,7 @@ spec:
     spec:
       initContainers:
         - name: transfer-file-ownership
-          image: sourcegraph/alpine:3.10@sha256:4d05cd5669726fc38823e92320659a6d1ef7879e62268adec5df658a0bacf65c
+          image: alpine
           command: ["sh", "-c", "chown -R 472:472 /var/lib/grafana"]
           volumeMounts:
             - mountPath: /var/lib/grafana
